2008-10-31  Chris Fleizach  <cfleizach@apple.com>

        Reviewed by Darin Adler.

        <rdar://problem/4361197> Screen Reader's Item Chooser shows scroll area for WebKit Application window

        If a WebFrameView does not allow scrolling, its scrollbars should not appear in the accessibility hierarchy.

        * WebView/WebDynamicScrollBarsView.m:
        (-[WebDynamicScrollBarsView accessibilityIsIgnored]):

2008-10-30  Mark Rowe  <mrowe@apple.com>

        Reviewed by Jon Homeycutt.

        Explicitly default to building for only the native architecture in debug and release builds.

        * Configurations/DebugRelease.xcconfig:

2008-10-30  Cameron Zwarich  <zwarich@apple.com>

        Rubber-stamped by Sam Weinig.

        Create a debugger directory in JavaScriptCore and move the relevant
        files to it.

        * ForwardingHeaders/debugger: Added.
        * ForwardingHeaders/debugger/DebuggerCallFrame.h: Copied from ForwardingHeaders/kjs/DebuggerCallFrame.h.
        * ForwardingHeaders/kjs/DebuggerCallFrame.h: Removed.
        * WebView/WebScriptDebugDelegate.mm:
        * WebView/WebScriptDebugger.h:
        * WebView/WebScriptDebugger.mm:

2008-10-29  Anders Carlsson  <andersca@apple.com>

        Reviewed by Kevin Decker.

        * Plugins/WebBaseNetscapePluginStream.h:
        * Plugins/WebBaseNetscapePluginStream.mm:
        (WebNetscapePluginStream::WebNetscapePluginStream):
        (WebNetscapePluginStream::~WebNetscapePluginStream):
        (WebNetscapePluginStream::start):

2008-10-29  Anders Carlsson  <andersca@apple.com>

        Reviewed by Sam Weinig.

        Remove an unused forward class declaration.
        
        * Plugins/WebBaseNetscapePluginView.h:

2008-10-29  Anders Carlsson  <andersca@apple.com>

        Reviewed by Sam Weinig.

        Remove WebBaseNetscapePluginViewInternal.h and WebBaseNetscapePluginViewPrivate.h.

        * Plugins/WebBaseNetscapePluginView.h: